--- a/tableau-server/terraform.tfvars.example
+++ b/tableau-server/terraform.tfvars.example
@@ -6,25 +6,25 @@
 #############################################
 
 # AWS設定
-aws_region        = "us-east-1"           # AWSリージョン
-availability_zone = "us-east-1a"          # アベイラビリティゾーン
+aws_region        = "us-east-2"           # AWSリージョン
+availability_zone = "us-east-2a"          # アベイラビリティゾーン
 
 # EC2設定
-instance_type    = "r6i.xlarge"           # インスタンスタイプ（32GB RAM推奨、64GBならr6i.2xlarge）
-key_name         = "your-key-pair-name"   # EC2キーペア名（必須）
-root_volume_size = 100                    # ルートボリューム（GB）
-data_volume_size = 200                    # データボリューム（GB）
+instance_type    = "r7i.xlarge"           # インスタンスタイプ
+key_name         = "tableau-server-key"   # EC2キーペア名（事前にAWS CLIで作成）
+root_volume_size = 200                    # ルートボリューム（GB）
+data_volume_size = 0                      # データボリューム（GB）
 
 # ネットワーク設定（デフォルトVPCを使用する場合は空のまま）
 # vpc_id    = "vpc-xxxxxxxxx"
 # subnet_id = "subnet-xxxxxxxxx"
 
 # アクセス制限（必須 - セキュリティのため必ず指定）
-allowed_ssh_cidrs  = ["10.0.0.0/8"]       # SSH接続を許可するCIDR（VPNのCIDRを指定）
+allowed_ssh_cidrs  = ["104.161.242.0/24"] # Zscaler
 allowed_http_cidrs = ["0.0.0.0/0"]        # HTTP/HTTPS接続を許可するCIDR
 
 # Tableau Server設定
-tableau_version = "2025.3.2"              # Tableauバージョン（https://www.tableau.com/support/releases/server で確認）
+tableau_version = "2025.3.1"              # Tableauバージョン（https://www.tableau.com/support/releases/server で確認）
 license_key     = "XXXX-XXXX-XXXX-XXXX-XXXX"  # ライセンスキー（必須）
 admin_username  = "admin"                 # 管理者ユーザー名
 admin_password  = "YourSecurePassword123" # 管理者パスワード（必須）
